Fix assertion regression (298647@main). https://bugs.webkit.org/show_bug.cgi?id=297414 rdar://158349001

Reviewed by Per Arne Vollan.

- Add status check before calling markAsHandled.
- Remove redundant ASSERT (already in promise()).

* Source/WebCore/bindings/js/JSDOMPromise.cpp:
(WebCore::DOMPromise::markAsHandled):
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::innerDispatchNavigateEvent):

Canonical link: https://commits.webkit.org/298757@main